@@ -72,8 +72,8 @@ import uk.ac.manchester.tornado.api.TornadoDriver;
 import uk.ac.manchester.tornado.api.TornadoExecutionPlan;
 import uk.ac.manchester.tornado.api.TornadoExecutionResult;
 import uk.ac.manchester.tornado.api.TornadoTaskGraphInterface;
-import uk.ac.manchester.tornado.api.common.Access;
 import uk.ac.manchester.tornado.api.common.Event;
+import uk.ac.manchester.tornado.api.common.PrebuiltTaskPackage;
 import uk.ac.manchester.tornado.api.common.SchedulableTask;
 import uk.ac.manchester.tornado.api.common.TaskPackage;
 import uk.ac.manchester.tornado.api.common.TornadoDevice;
@@ -204,6 +204,8 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private ProfilerMode profilerMode;
 
+    private boolean cocurrentDevices;
+
     /**
      * Task Schedule implementation that uses GPU/FPGA and multicore backends. This constructor must be public. It is invoked using the reflection API.
      *
@@ -292,7 +294,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         inputObjects.get(14));
                 break;
             default:
-                System.out.println("COPY-IN Not supported yet: " + numObjectsCopyIn);
+                System.out.println(STR."COPY-IN Not supported yet: \{numObjectsCopyIn}");
                 break;
         }
     }
@@ -360,7 +362,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         outputArrays.get(7), outputArrays.get(8), outputArrays.get(9), outputArrays.get(10), outputArrays.get(11), outputArrays.get(12), outputArrays.get(13), outputArrays.get(14));
                 break;
             default:
-                System.out.println("COPY-OUT Not supported yet: " + numObjectsCopyOut);
+                System.out.println(STR."COPY-OUT Not supported yet: \{numObjectsCopyOut}");
                 break;
         }
     }
@@ -380,43 +382,6 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
         argumentsLookUp.remove(oldRef);
         argumentsLookUp.add(newRef);
-    }
-
-    @Override
-    public void replaceParameter(Object oldParameter, Object newParameter) {
-        // 1. Update from the streamIn list of objects
-        updateReference(oldParameter, newParameter, streamInObjects);
-
-        // 2. Update from the stream out list of objects
-        updateReference(oldParameter, newParameter, streamOutObjects);
-
-        // 3. Update from graphContext and replace the object state.
-        // Otherwise, if the object is copied in (via COPY_IN), we might think the
-        // object is already on the device heap.
-        executionContext.replaceObjectState(oldParameter, newParameter);
-
-        // 4. Update the global states array in the vm.
-        if (vm != null) {
-            vm.fetchGlobalStates();
-        }
-
-        // 5. Set the update data flag to true in order to create a new call wrapper
-        // on the device.
-        updateData = true;
-
-        // 6. Update task-parameters
-        // Force to recompile the task-sketcher
-        for (TaskPackage tp : taskPackages) {
-            Object[] params = tp.getTaskParameters();
-            for (int k = 1; k < params.length; k++) {
-                if (params[k].equals(oldParameter)) {
-                    params[k] = newParameter;
-                }
-            }
-        }
-        if (this.gridScheduler == null) {
-            triggerRecompile();
-        }
     }
 
     @Override
@@ -492,6 +457,16 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     @Override
+    public void withConcurrentDevices() {
+        this.cocurrentDevices = true;
+    }
+
+    @Override
+    public void withoutConcurrentDevices() {
+        this.cocurrentDevices = false;
+    }
+
+    @Override
     public SchedulableTask getTask(String id) {
         return executionContext.getTask(id);
     }
@@ -532,7 +507,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             }
         }
 
-        // Release locked buffers from the old device and lock them on the new one.
+        //Release locked buffers from the old device and lock them on the new one.
         for (LocalObjectState localState : executionContext.getObjectStates()) {
             final GlobalObjectState globalState = localState.getGlobalState();
             final DeviceObjectState deviceState = globalState.getDeviceState(oldDevice);
@@ -547,6 +522,38 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         for (LocalObjectState localState : executionContext.getObjectStates()) {
             reuseDeviceBufferObject(localState, device);
         }
+    }
+
+    @Override
+    public void setDevice(String taskName, TornadoDevice device) {
+
+        TornadoDevice oldDevice = meta().getLogicDevice();
+
+        // Make sure that a sketch is available for the device.
+        for (int i = 0; i < executionContext.getTaskCount(); i++) {
+            SchedulableTask task = executionContext.getTask(i);
+            String name = task.getId();
+            if (name.equals(taskName)) {
+                task.meta().setDevice(device);
+                if (task instanceof CompilableTask) {
+                    ResolvedJavaMethod method = TornadoCoreRuntime.getTornadoRuntime().resolveMethod(((CompilableTask) task).getMethod());
+                    if (!task.getDevice().getDeviceContext().isCached(method.getName(), task)) {
+                        updateInner(i, task);
+                    }
+                }
+            }
+        }
+
+        // Release locked buffers from the old device and lock them on the new one.
+        for (LocalObjectState localState : executionContext.getObjectStates()) {
+            final GlobalObjectState globalState = localState.getGlobalState();
+            final DeviceObjectState deviceState = globalState.getDeviceState(oldDevice);
+            if (deviceState.isLockedBuffer()) {
+                releaseObjectFromDeviceMemory(localState, oldDevice);
+                reuseDeviceBufferObject(localState, device);
+            }
+        }
+
     }
 
     private void triggerRecompile() {
@@ -570,11 +577,6 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return executionContext.getDeviceForTask(id);
     }
     
-    @Override
-    public void setDeviceForTask(String id, TornadoDevice mapping) {
-    }
-    
-
     private void updateInner(int index, SchedulableTask task) {
         int driverIndex = task.meta().getDriverIndex();
         Providers providers = TornadoCoreRuntime.getTornadoRuntime().getDriver(driverIndex).getProviders();
@@ -638,7 +640,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         if ((task.getTaskName() != null) && (task.getId() != null)) {
             String methodName = (task instanceof PrebuiltTask prebuiltTask)
                     ? prebuiltTask.getFilename()
-                    : ((CompilableTask) task).getMethod().getDeclaringClass().getSimpleName() + "." + task.getTaskName();
+                    : STR."\{((CompilableTask) task).getMethod().getDeclaringClass().getSimpleName()}.\{task.getTaskName()}";
             timeProfiler.registerMethodHandle(ProfilerType.METHOD, task.getId(), methodName);
         }
     }
@@ -816,11 +818,11 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private void dumpDeoptReason(TornadoBailoutRuntimeException e) {
         if (!Tornado.DEBUG) {
-            System.err.println(RED + "[Bailout] Running the sequential implementation. Enable --debug to see the reason." + RESET);
+            System.err.println(STR."\{RED}[Bailout] Running the sequential implementation. Enable --debug to see the reason.\{RESET}");
         } else {
             System.err.println(e.getMessage());
             for (StackTraceElement s : e.getStackTrace()) {
-                System.err.println("\t" + s);
+                System.err.println(STR."\t\{s}");
             }
         }
     }
@@ -833,6 +835,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     @Override
     public void scheduleInner() {
+
         boolean compile = compileToTornadoVMBytecode();
         TornadoAcceleratorDevice deviceForTask = executionContext.getDeviceForTask(0);
         if (compile && deviceForTask.getDeviceContext().isPlatformFPGA()) {
@@ -840,7 +843,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         }
 
         try {
-            event = vm.execute();
+            event = vm.execute(cocurrentDevices);
             timeProfiler.stop(ProfilerType.TOTAL_TASK_GRAPH_TIME);
             updateProfiler();
         } catch (TornadoBailoutRuntimeException e) {
@@ -850,9 +853,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 if (Tornado.DEBUG) {
                     e.printStackTrace();
                 }
-                throw new TornadoBailoutRuntimeException("Bailout is disabled. \nReason: " + e.getMessage());
+                throw new TornadoBailoutRuntimeException(STR."Bailout is disabled. \nReason: \{e.getMessage()}");
             }
         }
+
     }
 
     @Override
@@ -944,7 +948,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     public void transferToDevice(final int mode, Object... objects) {
         for (Object functionParameter : objects) {
             if (functionParameter == null) {
-                throw new TornadoRuntimeException("[ERROR] null object passed into streamIn() in schedule " + executionContext.getId());
+                throw new TornadoRuntimeException(STR."[ERROR] null object passed into streamIn() in schedule \{executionContext.getId()}");
             }
 
             if (functionParameter instanceof Number) {
@@ -994,7 +998,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
             // If the object mode is set to LAST then we *only* insert it in the lookup
             // hash-set.
-            if (mode != DataTransferMode.USER_DEFINED) {
+            if (mode != DataTransferMode.UNDER_DEMAND) {
                 streamOutObjects.add(functionParameter);
                 executionContext.getObjectState(functionParameter).setStreamOut(true);
             }
@@ -1110,8 +1114,28 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         return null;
     }
 
+    private Event syncObjectInner(Object object, long offset, long partialCopySize) {
+        final LocalObjectState localState = executionContext.getObjectState(object);
+        final GlobalObjectState globalState = localState.getGlobalState();
+        final TornadoAcceleratorDevice device = meta().getLogicDevice();
+        final DeviceObjectState deviceState = globalState.getDeviceState(device);
+        deviceState.setPartialCopySize(partialCopySize);
+        if (deviceState.isLockedBuffer()) {
+            return device.resolveEvent(device.streamOutBlocking(object, offset, deviceState, null));
+        }
+        return null;
+    }
+
     private Event syncParameter(Object object) {
         Event eventParameter = syncObjectInner(object);
+        if (eventParameter != null) {
+            eventParameter.waitOn();
+        }
+        return eventParameter;
+    }
+
+    private Event syncParameter(Object object, long offset, long partialCopySize) {
+        Event eventParameter = syncObjectInner(object, offset, partialCopySize);
         if (eventParameter != null) {
             eventParameter.waitOn();
         }
@@ -1156,6 +1180,37 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getObjectBuffer().size());
             }
             updateProfiler();
+        }
+    }
+
+    @Override
+    public void syncRuntimeTransferToHost(Object object, long offset, long partialCopySize) {
+
+        if (vm == null) {
+            return;
+        }
+
+        Event event = null;
+
+        // Check if it is an argument captured by the scope (not in the parameter list).
+        if (!argumentsLookUp.contains(object)) {
+            syncField(object);
+        } else {
+            event = syncParameter(object, offset, partialCopySize);
+        }
+
+        if (TornadoOptions.isProfilerEnabled()) {
+            timeProfiler.clean();
+            if (event != null) {
+                long value = timeProfiler.getTimer(ProfilerType.COPY_OUT_TIME_SYNC);
+                event.waitForEvents();
+                value += event.getElapsedTime();
+                timeProfiler.setTimer(ProfilerType.COPY_OUT_TIME_SYNC, value);
+                LocalObjectState localState = executionContext.getObjectState(object);
+                DeviceObjectState deviceObjectState = localState.getGlobalState().getDeviceState(meta().getLogicDevice());
+                timeProfiler.addValueToMetric(ProfilerType.COPY_OUT_SIZE_BYTES_SYNC, TimeProfiler.NO_TASK_NAME, deviceObjectState.getObjectBuffer().size());
+                updateProfiler();
+            }
         }
     }
 
@@ -1222,16 +1277,14 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     private boolean checkAllArgumentsPerTask() {
         for (TaskPackage task : taskPackages) {
             Object[] taskParameters = task.getTaskParameters();
-            // Note: the first element in the object list is a lambda expression
-            // (computation)
+            // Note: the first element in the object list is a lambda expression (computation)
             for (int i = 1; i < (taskParameters.length - 1); i++) {
                 Object parameter = taskParameters[i];
                 if (isArgumentIgnorable(parameter)) {
                     continue;
                 }
                 if (!argumentsLookUp.contains(parameter)) {
-                    throw new TornadoTaskRuntimeException("Parameter #" + i + " <" + parameter + "> from task <" + task
-                            .getId() + "> not specified either in transferToDevice or transferToHost functions");
+                    throw new TornadoTaskRuntimeException(STR."Parameter #\{i} <\{parameter}> from task <\{task.getId()}> not specified either in transferToDevice or transferToHost functions");
                 }
             }
         }
@@ -1315,7 +1368,29 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     @Override
     public TornadoTaskGraphInterface schedule(GridScheduler gridScheduler) {
         this.gridScheduler = gridScheduler;
+        // check schedule names
+        checkGridSchedulerNames();
+        // Schedule the task-graph
         return schedule();
+    }
+
+    private boolean isTaskNamePresent(String taskName) {
+        for (TaskPackage taskPackage : taskPackages) {
+            if (taskName.equals(STR."\{taskGraphName}.\{taskPackage.getId()}")) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private void checkGridSchedulerNames() {
+        Set<String> gridTaskNames = gridScheduler.keySet();
+        for (String gridName : gridTaskNames) {
+            if (!isTaskNamePresent(gridName)) {
+                throw new TornadoRuntimeException(STR."[ERROR] Grid scheduler with name \{gridName} not found in the Task-Graph");
+            }
+        }
+
     }
 
     @SuppressWarnings("unchecked")
@@ -1408,7 +1483,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         taskPackage.getTaskParameters()[13], taskPackage.getTaskParameters()[14], taskPackage.getTaskParameters()[15]);
                 break;
             default:
-                throw new TornadoRuntimeException("Sequential Runner not supported yet. Number of parameters: " + type);
+                throw new TornadoRuntimeException(STR."Sequential Runner not supported yet. Number of parameters: \{type}");
         }
     }
 
@@ -1434,7 +1509,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 deviceWinnerIndex = position;
                 break;
             default:
-                throw new TornadoDynamicReconfigurationException("Policy " + policy + " not defined yet");
+                throw new TornadoDynamicReconfigurationException(STR."Policy \{policy} not defined yet");
         }
 
         return deviceWinnerIndex;
@@ -1462,7 +1537,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             } finally  {
                 if (threadRenamed) {
                     currentThread.setName(oldThreadName);
-                }            
+                }
             }
         };
     }
@@ -1486,7 +1561,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             }
             final long endSequentialCode = timer.time();
             if (TornadoOptions.DEBUG_POLICY) {
-                System.out.println("Seq finished: " + Thread.currentThread().getName());
+                System.out.println(STR."Seq finished: \{Thread.currentThread().getName()}");
             }
 
             return Long.valueOf(endSequentialCode - start);
@@ -1494,7 +1569,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     private List<Callable<Long>> runParallelTaskGraphs(TornadoDriver driver, int numDevices, Policy policy, Timer timer) {
-        return IntStream.range(0, numDevices).mapToObj(taskScheduleNumber -> runWithRenamedThread("Thread-DEV: " + deviceName(driver, taskScheduleNumber), () -> {
+        return IntStream.range(0, numDevices).mapToObj(taskScheduleNumber -> runWithRenamedThread(STR."Thread-DEV: \{deviceName(driver, taskScheduleNumber)}", () -> {
             String newTaskScheduleName = TASK_GRAPH_PREFIX + taskScheduleNumber;
             TaskGraph task = new TaskGraph(newTaskScheduleName);
             
@@ -1509,10 +1584,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 */
                 if (Tornado.DEBUG) {
                     int driverIndex = TornadoRuntime.getTornadoRuntime().getDriverIndex(driver.getClass());
-                    System.out.println("SET DEVICE: " + newTaskScheduleName + "." + taskID + ".device=" + driverIndex + ":" + taskScheduleNumber);
+                    System.out.println(STR."SET DEVICE: \{newTaskScheduleName}.\{taskID}.device=\{driverIndex}:\{taskScheduleNumber}");
                 }
                 task.addTask(taskPackage)
-                    .setDeviceForTask(newTaskScheduleName + "." + taskID, driver.getDevice(taskScheduleNumber));
+                    .setDevice(newTaskScheduleName + "." + taskID, driver.getDevice(taskScheduleNumber));
             }
             for (StreamingObject streamingObject : outputModeObjects) {
                 performStreamOutThreads(streamingObject.mode, task, streamingObject.object);
@@ -1612,7 +1687,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             policyTimeTable.put(policy, deviceWinnerIndex);
             if (TornadoOptions.DEBUG_POLICY) {
                 System.out.println(getListDevices(driver));
-                System.out.println("BEST Position: #" + deviceWinnerIndex + " " + Arrays.toString(totalTimers));
+                System.out.println(STR."BEST Position: #\{deviceWinnerIndex} \{Arrays.toString(totalTimers)}");
             }
         }
     }
@@ -1631,10 +1706,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         for (TaskPackage taskPackage : taskPackages) {
             String taskID = taskPackage.getId();
             /*
-            TornadoRuntime.setProperty(newTaskScheduleName + "." + taskID + ".device", "0:" + deviceWinnerIndex);
+           TornadoRuntime.setProperty(STR."\{newTaskScheduleName}.\{taskID}.device", STR."0:\{deviceWinnerIndex}");
             */
             taskToCompile.addTask(taskPackage)
-                         .setDeviceForTask(newTaskScheduleName + "." + taskID, driver.getDevice(deviceWinnerIndex));
+                         .setDevice(newTaskScheduleName + "." + taskID, driver.getDevice(deviceWinnerIndex));
         }
         performStreamOutThreads(DataTransferMode.EVERY_EXECUTION, taskToCompile, streamOutObjects);
         return taskToCompile;
@@ -1642,7 +1717,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
     private void runTaskGraphParallelSelected(TornadoDriver driver, int deviceWinnerIndex) {
         if (TornadoOptions.DEBUG_POLICY) {
-            System.out.println("Running in parallel device: " + deviceWinnerIndex);
+            System.out.println(STR."Running in parallel device: \{deviceWinnerIndex}");
         }
         TaskGraph task = taskGraphIndex.get(deviceWinnerIndex);
         if (task == null) {
@@ -1655,6 +1730,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 taskGraphIndex.put(deviceWinnerIndex, task);
             }
         }
+
         ImmutableTaskGraph immutableTaskGraph = task.snapshot();
         TornadoExecutionPlan executor = new TornadoExecutionPlan(immutableTaskGraph);
         executor.execute();
@@ -1758,13 +1834,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                 }
                 if (Tornado.DEBUG) {
                     int driverIndex = TornadoRuntime.getTornadoRuntime().getDriverIndex(driver.getClass());
-                    System.out.println("SET DEVICE: " + taskGraphName + "." + taskID + ".device=" + driverIndex + ":" + taskNumber);
+                    System.out.println(STR."SET DEVICE: \{taskGraphName}.\{taskID}.device=\{driverIndex}:\{taskNumber}");
                 }
                 /*
                 TornadoRuntime.setProperty(taskGraphName + "." + taskID + ".device", "0:" + taskNumber);
                 */
                 task.addTask(taskPackage)
-                    .setDeviceForTask(taskGraphName + "." + taskID, driver.getDevice(taskNumber));
+                    .setDevice(STR."\{taskGraphName}.\{taskID}", driver.getDevice(taskNumber));
             }
 
             if (ignoreTask) {
@@ -1843,23 +1919,13 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         int num = driver.getDeviceCount();
         for (int i = 0; i < num; i++) {
             TornadoDeviceType deviceType = driver.getDevice(i).getDeviceType();
-            String type;
-            switch (deviceType) {
-                case CPU:
-                    type = "CPU  ";
-                    break;
-                case GPU:
-                    type = "GPU  ";
-                    break;
-                case FPGA:
-                    type = "FPGA  ";
-                    break;
-                case ACCELERATOR:
-                    type = "ACCELERATOR";
-                    break;
-                default:
-                    type = "JAVA";
-            }
+            String type = switch (deviceType) {
+                case CPU -> "CPU  ";
+                case GPU -> "GPU  ";
+                case FPGA -> "FPGA  ";
+                case ACCELERATOR -> "ACCELERATOR";
+                default -> "JAVA";
+            };
             str.append(type).append(" ").append(",");
         }
         str.append("JVM]");
@@ -1886,7 +1952,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
 
             if (TornadoOptions.DEBUG_POLICY) {
                 System.out.println(getListDevices(driver));
-                System.out.println("BEST Position: #" + deviceWinnerIndex + " " + Arrays.toString(totalTimers));
+                System.out.println(STR."BEST Position: #\{deviceWinnerIndex} \{Arrays.toString(totalTimers)}");
             }
         }
     }
@@ -1921,7 +1987,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
      * @return max size of all input arrays.
      */
     private int getMaxInputSize() {
-        Object[] parameters = taskPackages.get(0).getTaskParameters();
+        Object[] parameters = taskPackages.getFirst().getTaskParameters();
         int size = 0;
         for (int i = 1; i < parameters.length; i++) {
             Object o = parameters[i];
@@ -1951,8 +2017,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
             // Run with the winner device
             int deviceWinnerIndex = policyTimeTable.get(policy);
             if (deviceWinnerIndex >= numDevices) {
-                // if the winner is the last index => it is the sequential
-                // (HotSpot)
+                // if the winner is the last index => it is the sequential (HotSpot)
                 runSequential();
             } else {
                 // Otherwise, it runs the parallel in the corresponding device
@@ -2022,7 +2087,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         parameters[7], parameters[8], parameters[9], parameters[10], parameters[11], parameters[12], parameters[13], parameters[14], parameters[15]));
                 break;
             default:
-                throw new TornadoRuntimeException("Task not supported yet. Type: " + type);
+                throw new TornadoRuntimeException(STR."Task not supported yet. Type: \{type}");
         }
     }
 
@@ -2086,7 +2151,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
                         parameters[8], parameters[9], parameters[10], parameters[11], parameters[12], parameters[13], parameters[14], parameters[15]));
                 break;
             default:
-                throw new TornadoRuntimeException("Task not supported yet. Type: " + type);
+                throw new TornadoRuntimeException(STR."Task not supported yet. Type: \{type}");
         }
     }
 
@@ -2145,18 +2210,10 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
     }
 
     @Override
-    public void addPrebuiltTask(String id, String entryPoint, String filename, Object[] args, Access[] accesses, TornadoDevice device, int[] dimensions) {
-        addInner(TaskUtils.createTask(meta(), id, entryPoint, filename, args, accesses, device, dimensions));
-    }
-
-    @Override
-    public void addPrebuiltTask(String id, String entryPoint, String filename, Object[] args, Access[] accesses, TornadoDevice device, int[] dimensions, int[] atomics) {
-        addInner(TaskUtils.createTask(meta(), id, entryPoint, filename, args, accesses, device, dimensions, atomics));
-    }
-
-    @Override
-    public void addScalaTask(String id, Object function, Object[] args) {
-        addInner(TaskUtils.scalaTask(id, function, args));
+    public void addPrebuiltTask(TaskPackage taskPackage) {
+        taskPackages.add(taskPackage);
+        PrebuiltTaskPackage prebuiltTaskPackage = (PrebuiltTaskPackage) taskPackage;
+        addInner(TaskUtils.createTask(meta(), prebuiltTaskPackage));
     }
 
     @Override
@@ -2175,7 +2232,7 @@ public class TornadoTaskGraph implements TornadoTaskGraphInterface {
         this.batchSizeBytes = switch (Objects.requireNonNull(units)) {
             case "MB" -> value * 1_000_000;
             case "GB" -> value * 1_000_000_000;
-            default -> throw new TornadoRuntimeException("Units not supported: " + units);
+            default -> throw new TornadoRuntimeException(STR."Units not supported: \{units}");
         };
         executionContext.setBatchSize(this.batchSizeBytes);
     }
